--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Author Panel {% endblock %}
+{% block title %}Admin Panel {% endblock %}
 
 {% block body %}
     <div class="home">
-        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="{% block sectionBackground %}/images/category.jpg{% endblock %}"
+        <div class="home_background parallax-window" data-parallax="scroll"
+             data-image-src="{% block sectionBackground %}/images/category.jpg{% endblock %}"
              data-speed="0.8"></div>
     </div>
 
@@ -20,7 +21,7 @@
                     {% endif %}
                     <div class="main_content">
                         {% block sectionBody %}
-                        <h3 class="text-dan">Select one of the options from the sidebar</h3>
+                            <h3 class="text-dan">Select one of the options from the sidebar</h3>
                         {% endblock %}
                     </div>
                 </div>
@@ -28,47 +29,17 @@
                     {% block sections %}
                         <div class="sidebar_section">
                             <div class="sidebar_title_container">
-                                <div class="sidebar_title">Articles</div>
+                                <div class="sidebar_title">Users</div>
                             </div>
                             <div class="sidebar_section_content pt-0">
                                 <ul class="list-group">
-                                    <li class="list-group-item"><a href="{{ path('create_article') }}">Create article</a>
-                                    </li>
                                     <li class="list-group-item">
-                                        <a href="{{ path('my_articles') }}">My articles</a>
+                                        <a href="{{ path('notify_all') }}">Notify all users</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <hr>
-                        <div class="sidebar_section">
-                            <div class="sidebar_title_container">
-                                <div class="sidebar_title">Categories</div>
-                            </div>
-                            <div class="sidebar_section_content pt-0">
-                                <ul class="list-group">
-                                    <li class="list-group-item">
-                                        <a href="{{ path('create_category') }}">Add Category</a>
-                                    </li>
-                                    {#<li class="list-group-item">#}
-                                        {#<a href="/brands/find-for-edit">Something else with quotes</a>#}
-                                    {#</li>#}
-                                </ul>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="sidebar_section">
-                            <div class="sidebar_title_container">
-                                <div class="sidebar_title">Followers ({{ app.user.followers|length }})</div>
-                            </div>
-                            <div class="sidebar_section_content pt-0">
-                                <ul class="list-group">
-                                    <li class="list-group-item">
-                                        <a href="{{ path('author_followers') }}">My followers</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                     {% endblock %}
                 {% endembed %}
             </div>
@@ -86,9 +57,9 @@
     <script src="{{ asset('styles/js/custom.js') }}"></script>
     <script>
         $(function () {
-           setTimeout(function () {
-               $('.response-text').fadeOut(1000);
-           }, 3000);
+            setTimeout(function () {
+                $('.response-text').fadeOut(1000);
+            }, 3000);
         });
     </script>
     {% block sectionScripts %} {% endblock %}
