--- a/app/Resources/views/author/articles/create-article-html.twig
+++ b/app/Resources/views/author/articles/create-article-html.twig
@@ -56,6 +56,10 @@
                 <input type="checkbox" {% if model.isVisible %}checked{% endif %} name="create_article[isVisible]" id="visible">
             </div>
             <div class="form-group">
+                <label for="notify">Notify users (make sure article is visible)</label>
+                <input type="checkbox" {% if model.notify %}checked{% endif %} name="create_article[notify]" id="notify">
+            </div>
+            <div class="form-group">
                 <label for="summary">Summary</label>
                 <input type="text" maxlength="255" name="create_article[summary]" id="summary" placeholder="Summary"
                        value="{{ model.summary }}" class="form-control">
