--- a/app/Resources/views/author/articles/edit-article-html.twig
+++ b/app/Resources/views/author/articles/edit-article-html.twig
@@ -60,6 +60,10 @@
                        id="visible">
             </div>
             <div class="form-group">
+                <label for="notify">Notify users (make sure article is visible)</label>
+                <input type="checkbox" {% if article.isNotified %}checked{% endif %} name="edit_article[notify]" id="notify">
+            </div>
+            <div class="form-group">
                 <label for="summary">Summary</label>
                 <input type="text" maxlength="255" name="edit_article[summary]" id="summary" placeholder="Summary"
                        value="{{ article.summary }}" class="form-control">
@@ -117,7 +121,7 @@
                 });
                 if (lenExceeding) {
                     e.preventDefault();
-                    alert("Tag too long (50 max)")
+                    alert("Tag too long (50 max)");
                     return;
                 }
             });
