--- a/web/styles/styles/custom-sub-form.css
+++ b/web/styles/styles/custom-sub-form.css
@@ -1,85 +1,20 @@
-.custom-sub-form{
 
+.input-group {
+    margin: 20px auto;
+    width: 100%;
 }
-
-.custom-sub-form .parent-wrapper {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 450px;
-    height: 270px;
-    color: #FFF;
-    margin: 0 auto;
-}
-
-
-.custom-sub-form .subscribe-wrapper {
-    position: absolute;
-    height: 200px;
-    padding: 30px;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(255,255,255,0.3)), url('/images/sub-box-background.png');
-    background-size: cover;
-    border-radius: 4px;
-    color: white;
-    box-shadow: 0px 0px 60px 5px rgba(0, 0, 0, 0.4);
-}
-
-.custom-sub-form .subscribe-wrapper:after {
-    position: absolute;
-    content: "";
-    right: -10px;
-    bottom: 71px;
-    width: 0;
-    height: 0;
-    border-left: 0px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #7149c7;
-}
-
-.custom-sub-form .subscribe-wrapper h4 {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 3px;
-    line-height: 28px;
-}
-
-.custom-sub-form .subscribe-wrapper input {
-    position: absolute;
-    bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #d4d4d4;
-    padding: 10px;
-    width: 65%;
-    background: transparent;
-    transition: all .25s ease;
-}
-
-.custom-sub-form .subscribe-wrapper input:focus {
-    outline: none;
-    border-bottom: 1px solid #a77cf4;
-}
-
-.custom-sub-form .subscribe-wrapper .submit-btn {
-    position: absolute;
-    border-radius: 30px;
-    border-bottom-right-radius: 0;
+input.btn.btn-lg {
+    width: 60%;
+    height: 60px;
     border-top-right-radius: 0;
-    background-color: #a77cf4;
-    color: #FFF;
-    padding: 12px 25px;
-    display: inline-block;
-    font-size: 12px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    right: -10px;
-    bottom: 30px;
-    cursor: pointer;
-    transition: all .25s ease;
-    box-shadow: -5px 6px 20px 0px rgba(51, 51, 51, 0.4);
+    border-bottom-right-radius: 0;
 }
-
-.custom-sub-form .subscribe-wrapper .submit-btn:hover {
-    background-color: #8e62dc;
+.sub-btn {
+    width: 40%;
+    height: 60px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.promise {
+    color: #999;
 }
