Added basic log entity and service to monitor some important events like mail sending. Added mail sender service. Admin can send email to all subs but it is soon to be refactored (moved out of controller).

--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -40,6 +40,19 @@
                             </div>
                         </div>
                         <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">Subscribers</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('email_all_get') }}">Email all subscribers</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
                     {% endblock %}
                 {% endembed %}
             </div>
