Added role service. Added first run service. Refactored some code duplications. Now there is no need to manually insert values in the db to make it run, first run service takes care of that on the FIRST register, therefore I will no longer commit the db schema "schema_jesterous".

--- a/app/Resources/views/admin/categories/create-category.html.twig
+++ b/app/Resources/views/admin/categories/create-category.html.twig
@@ -1,4 +1,4 @@
-{% extends 'author/panel.html.twig' %}
+{% extends 'admin/panel.html.twig' %}
 {% block title %}New Category{% endblock %}
 {% block sectionBody %}
     <h2 class="text-dark">New Category</h2>
