--- a/app/Resources/views/security/register.html.twig
+++ b/app/Resources/views/security/register.html.twig
@@ -2,10 +2,7 @@
 
 {% block body %}
 
-    <div class="home">
-        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="/images/category.jpg"
-             data-speed="0.8"></div>
-    </div>
+    {% embed 'partials/banner.html.twig' %}{% endembed %}
     <div class="page_content">
         <div class="container">
             <div class="row row-lg-eq-height">
@@ -23,4 +20,8 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/category.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/contact_responsive.css') }}">
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('styles/js/custom.js') }}"></script>
 {% endblock %}
