--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -53,6 +53,22 @@
                             </div>
                         </div>
                         <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">Categories</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('create_category') }}">Add Category</a>
+                                    </li>
+                                    {#<li class="list-group-item">#}
+                                    {#<a href="/brands/find-for-edit">Something else with quotes</a>#}
+                                    {#</li>#}
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
                     {% endblock %}
                 {% endembed %}
             </div>
