--- a/app/Resources/views/partials/lang/bg/register.html.twig
+++ b/app/Resources/views/partials/lang/bg/register.html.twig
@@ -11,7 +11,7 @@
         <h5 class="alert alert-danger">{{ error }}</h5>
     {% endif %}
 
-    <div class="text-dark">
+    <div class="text-dark col-md-6">
 
         <div class="form-group">
             <label for="username">Потребителско име</label>
@@ -36,3 +36,4 @@
     </div>
 
 </form>
+<h3 class="text-dark">Имате профил? <a href="{{ path('security_login') }}"> Вход</a> </h3>
