Users can unsubscribe. Authors can notify global subscribers, if permitted. Refactored admin sendting email to all subscribers.

--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -36,6 +36,9 @@
                                     <li class="list-group-item">
                                         <a href="{{ path('notify_all') }}">Notify all users</a>
                                     </li>
+                                    <li class="list-group-item">
+                                        <a href="{{ path('users_observe') }}">Roles</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
