--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -12,6 +12,9 @@
             {% if error is defined and error != null %}
                 <h2 class="alert alert-danger">{{ error }}</h2>
             {% endif %}
+            {% if info is defined and info != null %}
+                <h2 class="alert alert-success">{{ info }}</h2>
+            {% endif %}
             <div class="row row-lg-eq-height">
 
                 <!-- Main Content -->
