--- a/app/Resources/views/admin/users/send-email.html.twig
+++ b/app/Resources/views/admin/users/send-email.html.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <input type="text" class="form-control" name="message" id="message" required placeholder="Message" maxlength="255">
+                <textarea type="text" class="form-control" name="message" id="message" required placeholder="Message" maxlength="255"></textarea>
                 {#<div class="text-danger">{{ form_errors(form1.message) }}</div>#}
             </div>
 
