--- a/web/styles/styles/contact.css
+++ b/web/styles/styles/contact.css
@@ -600,7 +600,8 @@ section
 .contact_input
 {
 	display: inline-block;
-	width: calc(50% - 15px);
+	/*width: calc(50% - 15px);*/
+	width: 100%;
 	height: 42px;
 	border: none;
 	outline: none;
